Remove bigbot v16 code

--- a/examples/bigbot/.env.example
+++ b/examples/bigbot/.env.example
@@ -1,104 +1,142 @@
-# For Prisma use. Remember to remove the [ and ]
-DATABASE_URL=postgres:#[username]:[password]@[host]:[port]/[db]
-
-# For other configs, update src/configs.ts
-
+#
 # General Configurations
-# Whether or not this process is a local development version. Change to false for the main production bot. */
-# SETUP-DD-TEMP: Change this to false in your server for production bot. Keep true in local testing.
+#
+
+# Whether or not this process is a local development version
+# In production this value should be set to false
+# TEMPLATE-SETUP: When deploying, set this value to false
 DEVELOPMENT=true
 
-# The server id where you develop/test the bot. */
-# SETUP-DD-TEMP: Change the id to a server where you develop the bot privately.
+# The server id where you develop/test the bot
+# TEMPLATE-SETUP: Add the id to a server where you develop the bot
 DEV_SERVER_ID=
 
-# The discord bot token, without the BOT prefix. */
-# SETUP-DD-TEMP: Add the bot token here.
+# The discord bot token
+# NOTE: It should not be prefixed with Bot
+# TEMPLATE-SETUP: Add the bot token here.
 DISCORD_TOKEN=
 
-# Bot Configurations
-# The secret passcode that the bot code (event handler) is listening for. This is used to prevent someone else from trying to send malicious messages to your bot. */
-# SETUP-DD-TEMP: Add a secret passcode here.
-EVENT_HANDLER_AUTHORIZATION=SuperSecretPassword
+#
+# Bot Configuration
+#
 
-# The host where the event handler will run. Must follow https:#nodejs.org/api/net.html#serverlistenoptions-callback. */
-# SETUP-DD-TEMP: Set the event handler's host here.
+# NOTE: With "bot code" we refer to the code that will handle the events
+
+# The secret passcode that the bot code is checking for
+# This is used to prevent someone else from trying to send malicious events to your bot
+# TEMPLATE-SETUP: Add a secret passcode here. It can be whatever you want
+EVENT_HANDLER_AUTHORIZATION=
+
+# The host where the event handler will run
+# Will be used together with EVENT_HANDLER_PORT to compose the HTTP url to send the events to
+# TEMPLATE-SETUP: Set the event handler's host here
 EVENT_HANDLER_HOST=localhost
 
-# The port where the event handler is listening for events. */
-# SETUP-DD-TEMP: Set the desired port where events will be sent to be processed.
+# The port where the event handler will listening for events
+# TEMPLATE-SETUP: Set the port where events will be sent
 EVENT_HANDLER_PORT=8081
 
-# The full webhook url where the bot can send errors to alert you that the bot is missing translations. */
-# SETUP-DD-TEMP: Set a full discord webhook url here.
-MISSING_TRANSLATION_WEBHOOK=
-
-# The full webhook url where the bot can send errors to alert you that the bot is throwing errors. */
-# SETUP-DD-TEMP: Set a full discord webhook url here.
+# The full webhook url where the bot can send errors to alert you that the bot is throwing errors.
+# TEMPLATE-SETUP: Add the full discord webhook url
 BUGS_ERRORS_REPORT_WEBHOOK=
 
+#
 # Rest Proxy Configurations
-# The authorization code that the REST proxy will check for to make sure the requests are coming from you.  */
-# SETUP-DD-TEMP: Add a secret passcode here.
-REST_AUTHORIZATION=password123
+#
 
-# The host where the REST proxy will run. Must follow https:#nodejs.org/api/net.html#serverlistenoptions-callback. */
-# SETUP-DD-TEMP: Set the REST proxy's host here.
+# The passcode that the REST proxy is checking for
+# This is used to prevent someone else from trying to send malicious API requests from your bot
+# TEMPLATE-SETUP: Add a secret passcode here. It can be whatever you want
+REST_AUTHORIZATION=
+
+# The host where the REST proxy will run
+# Will be used together with REST_PORT to compose the HTTP url to send the API requests to
+# TEMPLATE-SETUP: Set the REST proxy's host here
 REST_HOST=localhost
 
-# The port that will run the REST proxy. */
-# SETUP-DD-TEMP: Choose the port number here that will be used for the REST proxy.
+# The port where the REST proxy will listen for API requests
+# TEMPLATE-SETUP: Set the port where API requests will be sent
 REST_PORT=8000
 
+#
 # Gateway Proxy Configurations
+#
 
-# The amount of shards to start. Useful with multiple servers where each server is handling a portion of your bot. */
-# SETUP-DD-TEMP: To start all bots, leave it as undefined. Specify he number of shards this process should handle.
+# The amount of shards to start
+# Useful with multiple servers where each server is handling a portion of your bot
+# OPTIONAL: You can leave this value unspecified if you want this server to manage all shards
+# TEMPLATE-SETUP: If you have separate servers, add the number of shards this process should handle
 TOTAL_SHARDS=
 
-# The amount of shards to start per worker. */
-# SETUP-DD-TEMP: Choose how many shards to start per worker. If you are not sure just stick to 16.
+# The amount of shards to start per worker.
+# NOTE: If you are not sure just stick to 16
+# TEMPLATE-SETUP: Set how many shards to start per worker
 SHARDS_PER_WORKER=16
 
-# The total amount of workers to start. Generally this should be equal to the number of cores your server has. */
-# SETUP-DD-TEMP: Choose how many workers to start up. If you are not sure, check how many cores your server has.
+# The total amount of workers to start.
+# NOTE: Generally this should be equal to the number of cores your server has
+# TEMPLATE-SETUP: Choose how many workers to start up
 TOTAL_WORKERS=4
 
-# The secret passcode that the gateway is listening for. This is used to prevent someone else from trying to send malicious messages to your bot. */
-# SETUP-DD-TEMP: Add a secret passcode here.
+# The passcode that the gateway is checking for
+# This is used to prevent someone else from trying to send malicious messages to your bot
+# TEMPLATE-SETUP: Set a secret passcode here. It can be whatever you want
 GATEWAY_AUTHORIZATION=
 
-# The host where the gateway will run. Must follow https:#nodejs.org/api/net.html#serverlistenoptions-callback. */
-# SETUP-DD-TEMP: Set the gateways's host here.
+# The host where the gateway will run
+# Will be used together with GATEWAY_PORT to compose the HTTP url to send the gateway messages to
+# TEMPLATE-SETUP: Set the gateway's host here
 GATEWAY_HOST=localhost
 
-# The port where the gateway will run. This is where the bot will send its messages to the gateway. */
-# SETUP-DD-TEMP: Set the gateways's port here.
+# The port where the gateway will listen for gateway messages
+# TEMPLATE-SETUP: Set the port where gateway messages will be sent
 GATEWAY_PORT=8080
 
-# Messsage queue / RabbitMQ configuration
-# enable using messages queue to send messages from gateway to bot
+#
+# Message queue (RabbitMQ configuration)
+#
+
+# Whatever to queue messages from the gateway to bot
+# NOTE: If this is set to true, all other configuration in this section are requried
+# NOTE: if this is set to false, gateway messages will be sent directly to the bot code, and will fail if the bot code is not running
 MESSAGEQUEUE_ENABLE=false
 
-# The url of the message queue
-MESSAGEQUEUE_URL=rabbitmq:5672
+# The url of the RabbitMQ instance
+MESSAGEQUEUE_URL=localhost:5672
 
-# username and password for the message queue
-MESSAGEQUEUE_USERNAME=guest
-MESSAGEQUEUE_PASSWORD=guest
+# Username for the authentication against the RabbitMQ instance
+MESSAGEQUEUE_USERNAME=
 
-# Database Configurations
+# Password for the authentication against the RabbitMQ instance
+MESSAGEQUEUE_PASSWORD=
 
-# These INFLUX configs are only if you wish to enable analytics. */
-# SETUP-DD-TEMP: This is optional. If you want to build analytics, add influxdb here.
+#
+# Analytics (InfluxDB configuration)
+#
+
+# NOTE: This entire section is optional
+# TEMPLATE-SETUP: If you want to enable analytics, add the the following values
+
+# The InfluxDB organization
 INFLUX_ORG=
+
+# The InfluxDB bucket
 INFLUX_BUCKET=
+
+# The InfluxDB secret API token
+# NOTE: this may need to be in quotes ("...") if it contains the = sign
 INFLUX_TOKEN=
-INFLUX_URL=http://influxdb:8086
+
+# The InfluxDB Instance url
+INFLUX_URL=http://localhost:8086
+
+#
+# Docker InfluxDB
+#
 
 DOCKER_INFLUXDB_INIT_MODE=setup
-DOCKER_INFLUXDB_INIT_USERNAME=skillz
-DOCKER_INFLUXDB_INIT_PASSWORD=ILoveskillz
+DOCKER_INFLUXDB_INIT_USERNAME=discordeno
+DOCKER_INFLUXDB_INIT_PASSWORD=discordeno
 DOCKER_INFLUXDB_INIT_ORG=discordeno
 DOCKER_INFLUXDB_INIT_BUCKET=discordeno
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=skillzPrefersID
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=discordeno
