--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.5",
     "turbo": "^1.11.3",
-    "typedoc": "0.25.11",
+    "typedoc": "^0.25.13",
     "typedoc-plugin-markdown": "3.17.1",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.2"
   },
   "engines": {
     "node": ">=18.0.0"
