--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -39,7 +39,7 @@
     "@swc/core": "^1.4.2",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.14.7",
     "@types/sinon": "^17.0.3",
     "c8": "^9.1.0",
     "chai": "^5.0.3",
@@ -49,6 +49,6 @@
     "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.2"
   }
 }
