--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -30,13 +30,13 @@
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.2",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.14.7",
     "c8": "^9.1.0",
     "eslint": "^8.57.0",
     "eslint-config-discordeno": "*",
     "mocha": "^10.3.0",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.2"
   }
 }
