--- a/packages/gateway/tsconfig.json
+++ b/packages/gateway/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "tsconfig/base.json",
-  "compilerOptions": {
-    "outDir": "./dist"
-  },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
-  "exclude": ["node_modules", "dist", "test", "tests"]
+  "extends": "tsconfig/base.json"
 }
