--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -45,6 +45,7 @@
     "c8": "^9.1.0",
     "chai": "^5.1.1",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^16.4.5",
     "mocha": "^10.5.1",
     "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
