--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "lint-staged": "^15.2.7",
     "prettier": "^3.2.5",
     "turbo": "^1.11.3",
-    "typedoc": "^0.26.3",
-    "typedoc-plugin-markdown": "3.17.1",
+    "typedoc": "^0.26.4",
+    "typedoc-plugin-markdown": "^4.1.2",
     "typescript": "^5.5.3"
   },
   "engines": {
