Re-add build:type dependency to lint

--- a/turbo.json
+++ b/turbo.json
@@ -37,6 +37,7 @@
       "outputs": ["coverage/**"]
     },
     "lint": {
+      "dependsOn": ["build:type"]
       "cache": false
     },
     "fmt": {
