fix discordeno bin file name

--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -7,7 +7,7 @@
     "require": "./dist/cjs/index.cjs",
     "types": "./dist/types/index.d.ts"
   },
-  "bin": "./bin/disocrdeno.js",
+  "bin": "./bin/discordeno.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
   "license": "Apache-2.0",
