--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -2,5 +2,8 @@
   "name": "tsconfig",
   "version": "0.0.0",
   "private": true,
-  "files": ["base.json", "test.json"]
+  "files": [
+    "base.json",
+    "test.json"
+  ]
 }
