work on .d.ts files

--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -35,6 +35,7 @@
     "@discordeno/types": "19.0.0-beta.1",
     "@discordeno/utils": "19.0.0-beta.1",
     "commander": "^12.1.0",
+    "find-up": "^7.0.0",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
