--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "outputs": ["coverage/**"]
     },
     "test:unit": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "build:type"],
       "outputs": ["coverage/**"]
     },
     "test:integration": {
