add build:type to deno-unit

--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,7 @@
       "dependsOn": ["^build:type"]
     },
     "test:deno-unit": {
-      "dependsOn": ["build", "^build"],
+      "dependsOn": ["build", "^build", "build:type"],
       "outputs": ["denoTestsDist/**"]
     },
     "test:bun-unit": {
