--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "outputs": ["coverage/**"]
     },
     "test:unit": {
-      "dependsOn": ["^build", "build:type"],
+      "dependsOn": ["build", "build:type"],
       "outputs": ["coverage/**"]
     },
     "test:integration": {
@@ -29,11 +29,11 @@
       "dependsOn": ["^build:type"]
     },
     "test:deno-unit": {
-      "dependsOn": ["build", "^build", "build:type"],
+      "dependsOn": ["build", "build:type"],
       "outputs": ["denoTestsDist/**"]
     },
     "test:bun-unit": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["build", "build:type"],
       "outputs": ["bunTestsDist/**"]
     },
     "test:e2e": {
