--- a/biome.jsonc
+++ b/biome.jsonc
@@ -43,6 +43,8 @@
   },
   "files": {
     "ignore": [
+      // Ignore the package.json and leave yarn to format it
+      "package.json",
       "node_modules",
       // Ignore turbo and docusaurus cache/stuff
       ".docusaurus",
