build(deps-dev): Update turbo to v2 (#3735)
* Update turbo to v2

Also some small config changes

* Remove test for the non-exiting "client" pkg

* Re-add build:type dependency to lint

* Add missing comma

* Use turbo in build:watch

--- a/package.json
+++ b/package.json
@@ -7,32 +7,31 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build --no-daemon",
-    "build:watch": "echo \"Starting build in watch mode...\" && chokidar \"packages/**/*.ts\" --ignore \"packages/**/dist/**/*.d.ts\"  -c \"yarn run build && yarn run build:type\"",
+    "build": "turbo run build",
+    "build:watch": "echo \"Starting build in watch mode...\" && chokidar \"packages/**/*.ts\" --ignore \"packages/**/dist/**/*.d.ts\"  -c \"turbo run build build:type\"",
     "build:doc": "typedoc --options ./typedoc.json && node scripts/finalizeTypedocs.js",
-    "build:type": "turbo run build:type --no-daemon",
-    "dev": "turbo run dev --parallel --no-daemon",
-    "fmt": "turbo run fmt --no-daemon",
+    "build:type": "turbo run build:type",
+    "release-build": "turbo run build build:type",
+    "test:bun-unit": "turbo run test:bun-unit",
+    "test:deno-unit": "turbo run test:deno-unit",
+    "test:e2e": "turbo run test:e2e",
+    "test:integration": "turbo run test:integration",
+    "test:test-type": "turbo run test:test-type",
+    "test:type": "turbo run build:type",
+    "test:unit": "turbo run test:unit",
+    "test:unit-coverage": "turbo run test:unit-coverage",
+    "fmt": "turbo run fmt",
     "format": "biome format --write",
-    "lint": "turbo run lint --no-daemon",
+    "lint": "turbo run lint",
     "prepare": "husky",
-    "release-build": "turbo run release-build --no-daemon",
-    "setup-dd": "husky",
-    "test:bun-unit": "turbo run test:bun-unit --no-daemon",
-    "test:deno-unit": "turbo run test:deno-unit --no-daemon",
-    "test:e2e": "turbo run test:e2e --no-daemon",
-    "test:integration": "turbo run test:integration --no-daemon",
-    "test:test-type": "turbo run test:test-type --no-daemon",
-    "test:type": "turbo run build:type --no-daemon",
-    "test:unit": "turbo run test:unit --no-daemon",
-    "test:unit-coverage": "turbo run test:unit-coverage --no-daemon"
+    "setup-dd": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
     "chokidar-cli": "^3.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "turbo": "^1.11.3",
+    "turbo": "^2.0.6",
     "typedoc": "^0.26.4",
     "typedoc-plugin-markdown": "^4.1.2",
     "typescript": "^5.5.3"
