--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -52,3 +52,4 @@ jobs:
         with:
           files: ./packages/${{ inputs.package }}/coverage/lcov.info
           flags: ${{ inputs.package }}-unit,${{ inputs.package }}
+          token: ${{ secrets.CODECOV_TOKEN }}
