--- a/turbo.json
+++ b/turbo.json
@@ -35,7 +35,7 @@
     "test:e2e": {
       "dependsOn": ["^build"],
       "outputs": ["coverage/**"],
-      "env": ["DISCORD_TOKEN", "UNIT_TEST_GUILD_ID"]
+      "env": ["DISCORD_TOKEN", "E2E_TEST_GUILD_ID"]
     },
     "lint": {
       "dependsOn": ["build:type"],
