--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@discordeno/types": "19.0.0-beta.1",
     "@discordeno/utils": "19.0.0-beta.1",
+    "fzstd": "^0.1.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
