--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -31,8 +31,10 @@
   "dependencies": {
     "@discordeno/types": "19.0.0-beta.1",
     "@discordeno/utils": "19.0.0-beta.1",
-    "fzstd": "^0.1.1",
     "ws": "^8.18.0"
+  },
+  "optionalDependencies": {
+    "fzstd": "^0.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
