fix(ci): Add env to `test:e2e` turbo task (#3809)
* Add env to test:e2e turbo task

Turbo in v2 does not pass down the environment variables unless manually specified (by default)

* use the correct env name for the test guild

--- a/turbo.json
+++ b/turbo.json
@@ -34,7 +34,8 @@
     },
     "test:e2e": {
       "dependsOn": ["^build"],
-      "outputs": ["coverage/**"]
+      "outputs": ["coverage/**"],
+      "env": ["DISCORD_TOKEN", "E2E_TEST_GUILD_ID"]
     },
     "lint": {
       "dependsOn": ["build:type"],
