Add some exclusions to website/tsconfig

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -4,5 +4,6 @@
   "compilerOptions": {
     "baseUrl": ".",
     "downlevelIteration": true
-  }
+  },
+  "exclude": ["node_modules", ".docusarus", "build"]
 }
