Update .yarnrc.yml's message to be more accurate
Remove docker reference as it is irrelevant

--- a/examples/advanced/.yarnrc.yml
+++ b/examples/advanced/.yarnrc.yml
@@ -1,4 +1,4 @@
-# This file is needed or else when yarn runs in `docker build` will attempt to use PnP
+# This file is needed or else when yarn runs it will attempt to use PnP
 compressionLevel: mixed
 enableGlobalCache: false
 nodeLinker: node-modules
