--- a/examples/reaction-roles/.yarnrc.yml
+++ b/examples/reaction-roles/.yarnrc.yml
@@ -1,4 +1,4 @@
-# This file is needed or else when yarn runs in `docker build` will attempt to use PnP
+# This file is needed or else when yarn runs it will attempt to use PnP
 compressionLevel: mixed
 enableGlobalCache: false
 nodeLinker: node-modules
