--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -33,6 +33,9 @@
     "@discordeno/utils": "19.0.0-beta.1",
     "ws": "^8.18.0"
   },
+  "optionalDependencies": {
+    "fzstd": "^0.1.1"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@swc/cli": "^0.4.0",
