--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -52,6 +52,6 @@
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "typescript": "^5.5.4",
-    "uWebSockets.js": "https://github.com/uNetworking/uWebSockets.js.git#commit=42c9c0d5d31f46ca4115dc75672b0037ec970f28"
+    "uWebSockets.js": "uNetworking/uWebSockets.js#54e5db370db746ed1c85021bdf215578a2164901"
   }
 }
