--- a/examples/bigbot/package.json
+++ b/examples/bigbot/package.json
@@ -11,6 +11,7 @@
     "start:bot": "node dist/bot/index.js",
     "start:rest": "node dist/rest/index.js",
     "start:gateway": "node dist/gateway/index.js",
+    "postinstall": "discordeno generate --config src/bot/discordeno.config.ts",
     "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "build:watch": "swc src --strip-leading-paths --delete-dir-on-start --watch --out-dir dist",
     "dev:bot": "node --watch --watch-preserve-output dist/bot/index.js",
@@ -19,11 +20,12 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-next.92bf166",
+    "@discordeno/bot": "19.0.0-next.76ad81d",
     "@fastify/multipart": "^8.3.0",
     "@influxdata/influxdb-client": "^1.33.2",
     "amqplib": "^0.10.4",
     "chalk": "^5.3.0",
+    "discordeno": "19.0.0-next.76ad81d",
     "fastify": "^4.28.0"
   },
   "devDependencies": {
