--- a/examples/reaction-roles/package.json
+++ b/examples/reaction-roles/package.json
@@ -8,11 +8,13 @@
   "packageManager": "yarn@4.0.2",
   "scripts": {
     "start": "node dist/index.js",
+    "postinstall": "discordeno generate --config src/discordeno.config.ts",
     "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-next.ad7e74c",
+    "@discordeno/bot": "19.0.0-next.76ad81d",
+    "discordeno": "19.0.0-next.76ad81d",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
