--- a/website/package.json
+++ b/website/package.json
@@ -18,13 +18,14 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@docusaurus/core": "3.5.2",
-    "@docusaurus/plugin-content-docs": "^3.5.2",
-    "@docusaurus/preset-classic": "3.5.2",
-    "@docusaurus/theme-common": "3.5.2",
-    "@easyops-cn/docusaurus-search-local": "^0.44.5",
-    "@mdx-js/react": "^3.0.1",
-    "chart.js": "^4.4.4",
+    "@docusaurus/core": "3.6.1",
+    "@docusaurus/faster": "^3.6.1",
+    "@docusaurus/plugin-content-docs": "^3.6.1",
+    "@docusaurus/preset-classic": "3.6.1",
+    "@docusaurus/theme-common": "3.6.1",
+    "@easyops-cn/docusaurus-search-local": "^0.45.0",
+    "@mdx-js/react": "^3.1.0",
+    "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
@@ -35,12 +36,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@docusaurus/module-type-aliases": "3.5.2",
-    "@docusaurus/tsconfig": "3.5.2",
-    "@docusaurus/types": "3.5.2",
-    "@types/react": "^18.3.11",
-    "esbuild-loader": "^4.2.2",
-    "typescript": "5.5.4",
+    "@docusaurus/module-type-aliases": "3.6.1",
+    "@docusaurus/tsconfig": "3.6.1",
+    "@docusaurus/types": "3.6.1",
+    "@types/react": "^18.3.12",
+    "typescript": "5.6.3",
     "webpack": "5.96.1"
   },
   "browserslist": {
