--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -7,7 +7,6 @@
     "require": "./dist/cjs/index.cjs",
     "types": "./dist/types/index.d.ts"
   },
-  "bin": "./bin/discordeno.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
   "license": "Apache-2.0",
@@ -30,14 +29,7 @@
     "test:test-type": "tsc --project tests/tsconfig.json"
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-beta.1",
-    "@discordeno/gateway": "19.0.0-alpha.1",
-    "@discordeno/rest": "19.0.0-alpha.1",
-    "@discordeno/types": "19.0.0-beta.1",
-    "@discordeno/utils": "19.0.0-beta.1",
-    "commander": "^12.1.0",
-    "find-up": "^7.0.0",
-    "typescript": "^5.6.3"
+    "@discordeno/bot": "19.0.0-beta.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -46,12 +38,11 @@
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.4",
-    "@types/sinon": "^17.0.3",
     "c8": "^10.1.2",
     "chai": "^5.1.2",
     "mocha": "^10.8.2",
-    "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "typescript": "^5.6.3"
   }
 }
