--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordeno-monorepo",
-  "version": "19.0.0-alpha.1",
+  "version": "19.0.0",
   "private": true,
   "type": "module",
   "workspaces": [
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "chokidar-cli": "^3.0.0",
-    "discordeno": "19.0.0-alpha.1",
+    "discordeno": "19.0.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "turbo": "^2.3.0",
