--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordeno/gateway",
-  "version": "19.0.0-alpha.1",
+  "version": "19.0.0",
   "main": "./dist/esm/index.js",
   "exports": {
     "import": "./dist/esm/index.js",
@@ -29,8 +29,8 @@
     "test:test-type": "tsc --project tests/tsconfig.json"
   },
   "dependencies": {
-    "@discordeno/types": "19.0.0-beta.1",
-    "@discordeno/utils": "19.0.0-beta.1",
+    "@discordeno/types": "19.0.0",
+    "@discordeno/utils": "19.0.0",
     "ws": "^8.18.0"
   },
   "optionalDependencies": {
