--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordeno/types",
-  "version": "19.0.0-beta.1",
+  "version": "19.0.0",
   "main": "./dist/esm/index.js",
   "exports": {
     "import": "./dist/esm/index.js",
