--- a/examples/reaction-roles/package.json
+++ b/examples/reaction-roles/package.json
@@ -8,19 +8,17 @@
   "packageManager": "yarn@4.0.2",
   "scripts": {
     "start": "node dist/index.js",
-    "postinstall": "discordeno generate --config src/discordeno.config.ts",
     "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-next.76ad81d",
-    "discordeno": "19.0.0-next.76ad81d",
+    "@discordeno/bot": "19.0.0",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.5.25",
-    "@types/node": "^20.14.2",
-    "typescript": "^5.4.5"
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.9.2",
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
