--- a/examples/bigbot/package.json
+++ b/examples/bigbot/package.json
@@ -19,18 +19,18 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-next.92bf166",
-    "@fastify/multipart": "^8.3.0",
+    "@discordeno/bot": "19.0.0",
+    "@fastify/multipart": "^9.0.1",
     "@influxdata/influxdb-client": "^1.33.2",
     "amqplib": "^0.10.4",
     "chalk": "^5.3.0",
-    "fastify": "^4.28.0"
+    "fastify": "^5.1.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.6.3",
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.9.2",
     "@types/amqplib": "^0.10.5",
-    "@types/node": "^20.14.6",
-    "typescript": "^5.5.2"
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
