--- a/examples/reaction-roles/package.json
+++ b/examples/reaction-roles/package.json
@@ -12,13 +12,13 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-next.ad7e74c",
+    "@discordeno/bot": "19.0.0",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.5.25",
-    "@types/node": "^20.14.2",
-    "typescript": "^5.4.5"
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.9.2",
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
