--- a/examples/bigbot/Dockerfile
+++ b/examples/bigbot/Dockerfile
@@ -4,7 +4,7 @@ ARG NODE_VERSION=20
 
 ################################################################################
 
-FROM node:${NODE_VERSION}-alpine as base
+FROM node:${NODE_VERSION}-alpine AS base
 
 # Set working directory for all build stages.
 WORKDIR /usr/src/app
@@ -26,50 +26,50 @@ COPY . .
 RUN yarn build
 
 # Use production node environment by default.
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 # Run the application as a non-root user.
 USER node
 
 ################################################################################
 
-FROM base as rest
+FROM base AS rest
 
 # Expose the port that the application listens on.
 EXPOSE 8000
 
 # Run the application.
-CMD node dist/rest/index.js
+CMD ["node", "dist/rest/index.js"]
 
 ################################################################################
 
-FROM base as gateway
+FROM base AS gateway
 
 # Expose the port that the application listens on.
 EXPOSE 8080
 
 # Run the application.
-CMD node dist/gateway/index.js
+CMD ["node", "dist/gateway/index.js"]
 
 ################################################################################
 
-FROM base as bot
+FROM base AS bot
 
 # Expose the port that the application listens on.
 EXPOSE 8081
 
 # Run the application.
-CMD node dist/bot/index.js
+CMD ["node", "dist/bot/index.js"]
 
 ################################################################################
 
-FROM rabbitmq:3.12-management-alpine as rabbitmq
+FROM rabbitmq:4.0-management-alpine AS rabbitmq
 
 # Copy the rabbitmq plugins
 COPY rabbitmq/plugins/** plugins
 
-HEALTHCHECK CMD [ "rabbitmq-diagnostics", "-q", "status" ] \
-  --interval=30s --timeout=30s --start-period=30s --retries=5
+HEALTHCHECK --interval=30s --timeout=30s --start-period=30s --retries=5 \
+  CMD rabbitmq-diagnostics -q ping || exit 1
 
 # Enable the required plugins
 RUN rabbitmq-plugins enable rabbitmq_message_deduplication
